WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149596
[Curl] Deadlock when downloading.
https://bugs.webkit.org/show_bug.cgi?id=149596
Summary
[Curl] Deadlock when downloading.
peavo
Reported
2015-09-28 06:55:32 PDT
The main thread tries to grab the same lock twice.
Attachments
Patch
(1.47 KB, patch)
2015-09-28 07:00 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-09-28 07:00:59 PDT
Created
attachment 262009
[details]
Patch
peavo
Comment 2
2015-09-28 10:26:14 PDT
Thanks for reviewing :)
WebKit Commit Bot
Comment 3
2015-09-28 10:33:43 PDT
Comment on
attachment 262009
[details]
Patch Clearing flags on attachment: 262009 Committed
r190279
: <
http://trac.webkit.org/changeset/190279
>
WebKit Commit Bot
Comment 4
2015-09-28 10:33:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug