[Curl] Deadlock when downloading. https://bugs.webkit.org/show_bug.cgi?id=149596

Reviewed by Alex Christensen.

Avoid grabbing the same lock twice.

* platform/network/curl/CurlDownload.cpp:
(WebCore::CurlDownload::init):
(WebCore::CurlDownload::addHeaders):


Canonical link: https://commits.webkit.org/167696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190279 268f45cc-cd09-0410-ab3c-d52691b4dbfc